fix: screensaver z-index

--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ header {
   top: 0;
   height: 100px;
   width: 100%;
-  z-index: 999;
+  z-index: 100;
   background: #3e3c3b;
   -webkit-box-shadow: 0px 6px 0px 3px rgba(0,0,0,0.5);
   -moz-box-shadow: 0px 6px 0px 3px rgba(0,0,0,0.5);
@@ -195,7 +195,7 @@ iframe {
   top: 100px;
   left: 0;
   right: 0;
-  z-index: 0;
+  z-index: -1;
   bottom: 100px;
 }
 
@@ -325,5 +325,23 @@ iframe {
 }
 
 video {
+	pointer-events: none;
+}
+
+#vid-overlay {
+	visibility: hidden;
+	position: fixed;
+	background: transparent;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: 999;
+}
+
+.vidcon {
 	z-index: 1000;
+	/*-webkit-overflow-scrolling: touch;
+	overflow: scroll;
+	pointer-events: none;*/
 }
